--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": false
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -30,10 +33,15 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": [ 
+              "node_modules/bootstrap/dist/css/bootstrap.css", 
+              "src/styles.scss" 
             ],
-            "scripts": []
+            "scripts": [ 
+              "node_modules/jquery/dist/jquery.slim.min.js", 
+              "node_modules/popper.js/dist/umd/popper.min.js", 
+              "node_modules/bootstrap/dist/js/bootstrap.min.js" 
+            ]
           },
           "configurations": {
             "production": {
@@ -98,10 +106,15 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": [ 
+              "node_modules/bootstrap/dist/css/bootstrap.css", 
+              "src/styles.scss" 
             ],
-            "scripts": []
+            "scripts": [ 
+              "node_modules/jquery/dist/jquery.slim.min.js", 
+              "node_modules/popper.js/dist/umd/popper.min.js", 
+              "node_modules/bootstrap/dist/js/bootstrap.min.js" 
+            ]
           }
         }
       }
