--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/assets"
             ],
             "styles": [ 
-              "node_modules/bootstrap/dist/css/bootstrap.css", 
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", 
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss" 
             ],
             "scripts": [ 
@@ -111,7 +112,8 @@
               "src/assets"
             ],
             "styles": [ 
-              "node_modules/bootstrap/dist/css/bootstrap.css", 
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", 
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss" 
             ],
             "scripts": [ 
